--- a/index.html
+++ b/index.html
@@ -50,13 +50,24 @@
         </div>
 
         <div class="flex">
-            <img src="/img/portero_preview_rev_1.png" alt="Arbitro" class="portero">
+            <img src="/img/portero_preview_rev_1.png" alt="Portero" class="portero">
         </div>
 
         <div class="flex">
             <img src="/img/grada.jpg" alt="Grada" class="grada">
         </div>
         
+        <div class="flex">
+            <img src="/img/giphy.webp" alt="Grada" class="celebracion3">
+        </div>
+
+        <div class="flex">
+            <img src="/img/200.webp" alt="Cristiano" class="celebracion4">
+        </div>
+
+        <div class="flex">
+            <img src="/img/giphy (1).webp" alt="Grada" class="celebracion5">
+        </div>
         
     </main>
 
@@ -66,7 +77,7 @@
                 <span></span><span></span><span></span>
             </div>
             <ul class="submenu">
-                <li class="quitaPunto inline letra color tra"><a href="" target="_blank">Github</a></li>
+                <li class="quitaPunto inline letra color tra"><a href="https://github.com/David-Escalona/Animacion" target="_blank">Github</a></li>
             </ul>
         </nav>
     </footer>
