--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header>
 
     <main>
-        <img src="/img/messi_preview_rev_1.png" alt="Messi" class="messi">
-        <img src="/img/pelota_preview_rev_1.png" alt="Pelota" class="pelota">
+        <img src="img/messi_preview_rev_1.png" alt="Messi" class="messi">
+        <img src="img/pelota_preview_rev_1.png" alt="Pelota" class="pelota">
 
         <div class="flex">
             <img src="/img/gradas.jpg" alt="Gradas" class="grada1">
