--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
         <img src="img/pelota_preview_rev_1.png" alt="Pelota" class="pelota">
 
         <div class="flex">
-            <img src="/img/gradas.jpg" alt="Gradas" class="grada1">
-            <img src="/img/gradas.jpg" alt="Gradas" class="grada2">
-            <img src="/img/gradas.jpg" alt="Gradas" class="grada3">
-            <img src="/img/gradas.jpg" alt="Gradas" class="grada4">
+            <img src="img/gradas.jpg" alt="Gradas" class="grada1">
+            <img src="img/gradas.jpg" alt="Gradas" class="grada2">
+            <img src="img/gradas.jpg" alt="Gradas" class="grada3">
+            <img src="img/gradas.jpg" alt="Gradas" class="grada4">
         </div>
 
         <div class="flex">
-            <img src="/img/celebracion_preview_rev_1.png" alt="Celebracion" class="celebracion1">
+            <img src="img/celebracion_preview_rev_1.png" alt="Celebracion" class="celebracion1">
         </div>
 
         <div class="flex">
-            <img src="/img/neymar_preview_rev_1.png" alt="Celebracion" class="celebracion2">
+            <img src="img/neymar_preview_rev_1.png" alt="Celebracion" class="celebracion2">
         </div>
 
         <div class="flex">
-            <img src="/img/arbitro_preview_rev_1.png" alt="Arbitro" class="arbitro">
+            <img src="img/arbitro_preview_rev_1.png" alt="Arbitro" class="arbitro">
         </div>
 
         <div class="flex">
-            <img src="/img/portero_preview_rev_1.png" alt="Portero" class="portero">
+            <img src="img/portero_preview_rev_1.png" alt="Portero" class="portero">
         </div>
 
         <div class="flex">
-            <img src="/img/grada.jpg" alt="Grada" class="grada">
+            <img src="img/grada.jpg" alt="Grada" class="grada">
         </div>
         
         <div class="flex">
-            <img src="/img/giphy.webp" alt="Grada" class="celebracion3">
+            <img src="img/giphy.webp" alt="Grada" class="celebracion3">
         </div>
 
         <div class="flex">
-            <img src="/img/200.webp" alt="Cristiano" class="celebracion4">
+            <img src="img/200.webp" alt="Cristiano" class="celebracion4">
         </div>
 
         <div class="flex">
-            <img src="/img/giphy (1).webp" alt="Grada" class="celebracion5">
+            <img src="img/giphy (1).webp" alt="Grada" class="celebracion5">
         </div>
         
     </main>
