--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="flex">
-            <img src="img/giphy (1).webp" alt="Grada" class="celebracion5">
+            <img src="img/giphy1.webp" alt="Grada" class="celebracion5">
         </div>
         
     </main>
